# autoMate

./: .dockerignore  .gitignore  Dockerfile  README.md  README_CN.md  README_JA.md  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  publish.yml
automate/: __init__.py  cli.py  extension_bus.py  relay.py  settings.py
automate/agent/: __init__.py  loop.py  prompts.py
automate/frontend/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
automate/integrations/: __init__.py  airtable.py  amap.py  asana.py  base.py  dingtalk.py  discord.py  feishu.py  gitee.py  github_api.py  hubspot.py  jira.py  linear.py  sentry.py  shopify.py  slack.py  stripe.py  teams.py  telegram.py  twilio.py  twitter.py  wecom.py  weibo.py  weixin.py  zoom.py
automate/oauth/: __init__.py  catalog.py  flow.py
automate/providers/: __init__.py  anthropic.py  base.py  catalog.py  manager.py  openai_compat.py
automate/server/: app.py  mcp_bridge.py  state.py
automate/server/api/: _deps.py  agent.py  connect.py  execute.py  extension.py  integrations.py  models.py  oauth.py  sessions.py  system.py  tools.py
automate/store/: __init__.py  crypto.py  db.py
automate/tools/: __init__.py  browser.py  browser_ext.py  desktop.py  integrations_adapter.py  registry.py  script.py  shell.py
docs/: relay.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
integrations/: __init__.py  base.py  confluence.py  gitlab.py  mailchimp.py  monday.py  notion.py  sendgrid.py  trello.py  yuque.py
packaging/: automate.spec  launcher.py
