[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automate-hub"
version = "4.0.5"
description = "A scheduling hub that gives any LLM hands. Browser UI + MCP/HTTP entry points + 30+ SaaS integrations + shell/browser/desktop execution."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["agent", "mcp", "automation", "llm", "claude", "openai", "kimi", "qwen", "rpa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
]

# Minimal dependencies — server + storage + crypto. Everything else is opt-in.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
# Expose autoMate as a stdio MCP server (Claude Desktop / Cursor / Cline / Kimi)
mcp = ["mcp[cli]>=1.0.0"]
# Browser execution (Playwright). After install: `python -m playwright install chromium`
browser = ["playwright>=1.40"]
# Desktop execution (screenshot / mouse / keyboard). Skip on headless servers.
desktop = ["pyautogui>=0.9.54", "pillow>=10.0"]
# Reverse-tunnel client (`automate relay`) for using the hub from anywhere.
relay = ["websockets>=12.0", "httpx>=0.27"]
# Everything
full = [
    "automate-hub[mcp]",
    "automate-hub[browser]",
    "automate-hub[desktop]",
    "automate-hub[relay]",
]

[project.scripts]
# Primary entry: starts the BS hub and opens the browser UI.
automate = "automate.cli:main"
# Stdio MCP entry — for upstream LLM clients to mount autoMate as a tool server.
automate-mcp = "automate.cli:main"

[project.urls]
Homepage   = "https://github.com/yuruotong1/autoMate"
Repository = "https://github.com/yuruotong1/autoMate"
Issues     = "https://github.com/yuruotong1/autoMate/issues"

[tool.setuptools.packages.find]
include = ["automate*"]

[tool.setuptools.package-data]
"automate" = ["frontend/*", "frontend/**/*"]
